--- a/gui-qt/calcdebuger.ui
+++ b/gui-qt/calcdebuger.ui
@@ -13,13 +13,24 @@
   <property name="windowTitle">
    <string>Debuger</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QVBoxLayout" name="verticalLayout_4">
+   <item>
+    <widget class="QComboBox" name="cbTarget"/>
+   </item>
    <item>
     <widget class="QToolBox" name="toolBox">
      <property name="currentIndex">
       <number>1</number>
      </property>
      <widget class="QWidget" name="page_4">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>278</width>
+        <height>412</height>
+       </rect>
+      </property>
       <attribute name="label">
        <string>Breakpoints</string>
       </attribute>
@@ -175,7 +186,7 @@
         <x>0</x>
         <y>0</y>
         <width>278</width>
-        <height>446</height>
+        <height>412</height>
        </rect>
       </property>
       <attribute name="label">
@@ -747,7 +758,7 @@
         <x>0</x>
         <y>0</y>
         <width>278</width>
-        <height>446</height>
+        <height>412</height>
        </rect>
       </property>
       <attribute name="label">
@@ -913,6 +924,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="page_3">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>278</width>
+        <height>412</height>
+       </rect>
+      </property>
       <attribute name="label">
        <string>Ports</string>
       </attribute>
