--- a/gui-qt/calcdebuger.ui
+++ b/gui-qt/calcdebuger.ui
@@ -18,7 +18,7 @@
     <widget class="QComboBox" name="cbTarget"/>
    </item>
    <item>
-    <widget class="QToolBox" name="toolBox">
+    <widget class="QToolBox" name="tbPages">
      <property name="currentIndex">
       <number>1</number>
      </property>
@@ -180,21 +180,34 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="page">
+     <widget class="QWidget" name="pageCPU">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>278</width>
-        <height>412</height>
+        <width>261</width>
+        <height>426</height>
        </rect>
       </property>
       <attribute name="label">
        <string>CPU</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout">
-       <item>
-        <widget class="QGroupBox" name="groupBox_2">
+      <layout class="QGridLayout" name="gridLayout_5">
+       <item row="0" column="1">
+        <widget class="QSpinBox" name="spnRefresh">
+         <property name="suffix">
+          <string> ms</string>
+         </property>
+         <property name="maximum">
+          <number>1000</number>
+         </property>
+         <property name="value">
+          <number>50</number>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0" colspan="2">
+        <widget class="QGroupBox" name="gbRegisters">
          <property name="title">
           <string>Registers</string>
          </property>
@@ -207,7 +220,7 @@
            </widget>
           </item>
           <item row="0" column="1" colspan="2">
-           <widget class="QLineEdit" name="le_af">
+           <widget class="CalcHexValue" name="le_af">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -233,7 +246,7 @@
            </widget>
           </item>
           <item row="0" column="4" colspan="2">
-           <widget class="QLineEdit" name="le_af_shadow">
+           <widget class="CalcHexValue" name="le_af_shadow">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -259,7 +272,7 @@
            </widget>
           </item>
           <item row="1" column="1" colspan="2">
-           <widget class="QLineEdit" name="le_bc">
+           <widget class="CalcHexValue" name="le_bc">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -285,7 +298,7 @@
            </widget>
           </item>
           <item row="1" column="4" colspan="2">
-           <widget class="QLineEdit" name="le_bc_shadow">
+           <widget class="CalcHexValue" name="le_bc_shadow">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -311,7 +324,7 @@
            </widget>
           </item>
           <item row="2" column="1" colspan="2">
-           <widget class="QLineEdit" name="le_de">
+           <widget class="CalcHexValue" name="le_de">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -337,7 +350,7 @@
            </widget>
           </item>
           <item row="2" column="4" colspan="2">
-           <widget class="QLineEdit" name="le_de_shadow">
+           <widget class="CalcHexValue" name="le_de_shadow">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -363,7 +376,7 @@
            </widget>
           </item>
           <item row="3" column="1" colspan="2">
-           <widget class="QLineEdit" name="le_hl">
+           <widget class="CalcHexValue" name="le_hl">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -389,7 +402,7 @@
            </widget>
           </item>
           <item row="3" column="4" colspan="2">
-           <widget class="QLineEdit" name="le_hl_shadow">
+           <widget class="CalcHexValue" name="le_hl_shadow">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -415,7 +428,7 @@
            </widget>
           </item>
           <item row="4" column="1" colspan="2">
-           <widget class="QLineEdit" name="le_ix">
+           <widget class="CalcHexValue" name="le_ix">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -441,7 +454,7 @@
            </widget>
           </item>
           <item row="4" column="4" colspan="2">
-           <widget class="QLineEdit" name="le_sp">
+           <widget class="CalcHexValue" name="le_sp">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -467,7 +480,7 @@
            </widget>
           </item>
           <item row="5" column="1" colspan="2">
-           <widget class="QLineEdit" name="le_iy">
+           <widget class="CalcHexValue" name="le_iy">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -493,7 +506,7 @@
            </widget>
           </item>
           <item row="5" column="4" colspan="2">
-           <widget class="QLineEdit" name="le_pc">
+           <widget class="CalcHexValue" name="le_pc">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -514,25 +527,12 @@
           <item row="6" column="0">
            <widget class="QLabel" name="label_7">
             <property name="text">
-             <string>i</string>
+             <string>ir</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="1">
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>13</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="6" column="2">
-           <widget class="QLineEdit" name="le_i">
+          <item row="6" column="1" colspan="2">
+           <widget class="CalcHexValue" name="le_ir">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -541,59 +541,20 @@
             </property>
             <property name="maximumSize">
              <size>
-              <width>50</width>
+              <width>100</width>
               <height>16777215</height>
              </size>
             </property>
             <property name="inputMask">
-             <string>HH; </string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="3">
-           <widget class="QLabel" name="label_4">
-            <property name="text">
-             <string>r</string>
-            </property>
-           </widget>
-          </item>
-          <item row="6" column="4">
-           <spacer name="horizontalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>13</width>
-              <height>27</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="6" column="5">
-           <widget class="QLineEdit" name="le_r">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>50</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="inputMask">
-             <string>HH; </string>
+             <string>HHHH; </string>
             </property>
            </widget>
           </item>
          </layout>
         </widget>
        </item>
-       <item>
-        <widget class="QGroupBox" name="groupBox">
+       <item row="2" column="0" colspan="2">
+        <widget class="QGroupBox" name="gbFlags">
          <property name="title">
           <string>Flags</string>
          </property>
@@ -737,7 +698,7 @@
          </layout>
         </widget>
        </item>
-       <item>
+       <item row="3" column="1">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -749,6 +710,13 @@
           </size>
          </property>
         </spacer>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Refresh every</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -940,6 +908,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>CalcHexValue</class>
+   <extends>QLineEdit</extends>
+   <header>calchexvalue.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
