--- a/gui-qt/calcdebuger.ui
+++ b/gui-qt/calcdebuger.ui
@@ -22,7 +22,7 @@
      <property name="currentIndex">
       <number>1</number>
      </property>
-     <widget class="QWidget" name="page_4">
+     <widget class="QWidget" name="pageBreakpoints">
       <property name="geometry">
        <rect>
         <x>0</x>
@@ -720,7 +720,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="page_2">
+     <widget class="QWidget" name="pageMemory">
       <property name="geometry">
        <rect>
         <x>0</x>
@@ -740,35 +740,47 @@
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="0" column="0">
-           <widget class="QLabel" name="label_5">
-            <property name="text">
-             <string>Map mode</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1" colspan="3">
-           <widget class="QComboBox" name="cb_map_mode">
-            <item>
-             <property name="text">
-              <string>Mode 0 (default)</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>Mode 1</string>
-             </property>
-            </item>
-           </widget>
-          </item>
-          <item row="1" column="0">
            <widget class="QLabel" name="label_12">
             <property name="text">
              <string>Bank A</string>
             </property>
            </widget>
           </item>
+          <item row="0" column="1">
+           <widget class="CalcHexValue" name="le_bankA">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>100</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <property name="inputMask">
+             <string>HH; </string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QLabel" name="lbl_bankA">
+            <property name="text">
+             <string>Flash</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_25">
+            <property name="text">
+             <string>Bank B</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="le_bankA">
+           <widget class="CalcHexValue" name="le_bankB">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -787,21 +799,21 @@
            </widget>
           </item>
           <item row="1" column="3">
-           <widget class="QLabel" name="lbl_bankA">
+           <widget class="QLabel" name="lbl_bankB">
             <property name="text">
-             <string>Flash</string>
+             <string>RAM</string>
             </property>
            </widget>
           </item>
           <item row="2" column="0">
-           <widget class="QLabel" name="label_25">
+           <widget class="QLabel" name="label_26">
             <property name="text">
-             <string>Bank B</string>
+             <string>Bank C</string>
             </property>
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QLineEdit" name="le_bankB">
+           <widget class="CalcHexValue" name="le_bankC">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -820,46 +832,13 @@
            </widget>
           </item>
           <item row="2" column="3">
-           <widget class="QLabel" name="lbl_bankB">
-            <property name="text">
-             <string>RAM</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="0">
-           <widget class="QLabel" name="label_26">
-            <property name="text">
-             <string>Bank C</string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="1">
-           <widget class="QLineEdit" name="le_bankC">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>100</width>
-              <height>16777215</height>
-             </size>
-            </property>
-            <property name="inputMask">
-             <string>HH; </string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="3">
            <widget class="QLabel" name="lbl_bankC">
             <property name="text">
              <string>RAM</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="2" rowspan="3">
+          <item row="0" column="2" rowspan="3">
            <spacer name="horizontalSpacer_3">
             <property name="orientation">
              <enum>Qt::Horizontal</enum>
@@ -884,6 +863,12 @@
        </item>
        <item>
         <widget class="QGroupBox" name="groupBox_4">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Expanding">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="title">
           <string>HexView</string>
          </property>
@@ -891,7 +876,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="page_3">
+     <widget class="QWidget" name="pagePorts">
       <property name="geometry">
        <rect>
         <x>0</x>
