--- a/gui-qt/calcdebuger.ui
+++ b/gui-qt/calcdebuger.ui
@@ -6,16 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>296</width>
-    <height>592</height>
+    <width>244</width>
+    <height>558</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Debuger</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
+   <property name="sizeConstraint">
+    <enum>QLayout::SetMinimumSize</enum>
+   </property>
+   <property name="margin">
+    <number>0</number>
+   </property>
    <item>
-    <widget class="QComboBox" name="cbTarget"/>
+    <widget class="QComboBox" name="cb_target"/>
    </item>
    <item>
     <widget class="QToolBox" name="tbPages">
@@ -27,16 +33,19 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>278</width>
-        <height>412</height>
+        <width>234</width>
+        <height>354</height>
        </rect>
       </property>
       <attribute name="label">
        <string>Breakpoints</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_3">
+       <property name="margin">
+        <number>0</number>
+       </property>
        <item>
-        <widget class="QListView" name="lwBreakpoints">
+        <widget class="QListView" name="lw_breakpoints">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
@@ -54,6 +63,9 @@
           <string>Trigger</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_4">
+          <property name="margin">
+           <number>2</number>
+          </property>
           <item row="2" column="0">
            <widget class="QLabel" name="label_27">
             <property name="text">
@@ -226,16 +238,19 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>261</width>
-        <height>426</height>
+        <width>234</width>
+        <height>354</height>
        </rect>
       </property>
       <attribute name="label">
        <string>CPU</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_5">
+       <property name="margin">
+        <number>0</number>
+       </property>
        <item row="0" column="1">
-        <widget class="QSpinBox" name="spnRefresh">
+        <widget class="QSpinBox" name="spn_refresh">
          <property name="suffix">
           <string> ms</string>
          </property>
@@ -247,12 +262,35 @@
          </property>
         </widget>
        </item>
+       <item row="2" column="0" colspan="2">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_4">
+         <property name="text">
+          <string>Refresh</string>
+         </property>
+        </widget>
+       </item>
        <item row="1" column="0" colspan="2">
         <widget class="QGroupBox" name="gbRegisters">
          <property name="title">
           <string>Registers</string>
          </property>
          <layout class="QGridLayout" name="gridLayout">
+          <property name="margin">
+           <number>2</number>
+          </property>
           <item row="0" column="0">
            <widget class="QLabel" name="label_16">
             <property name="text">
@@ -591,173 +629,101 @@
             </property>
            </widget>
           </item>
+          <item row="6" column="3" colspan="3">
+           <widget class="CalcFlags" name="lbl_flags">
+            <property name="text">
+             <string/>
+            </property>
+            <property name="textFormat">
+             <enum>Qt::PlainText</enum>
+            </property>
+            <property name="alignment">
+             <set>Qt::AlignCenter</set>
+            </property>
+           </widget>
+          </item>
          </layout>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="pageDisasm">
+      <attribute name="label">
+       <string>Disassembly</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_2">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Start</string>
+         </property>
         </widget>
        </item>
-       <item row="2" column="0" colspan="2">
-        <widget class="QGroupBox" name="gbFlags">
-         <property name="title">
-          <string>Flags</string>
+       <item row="0" column="1" colspan="2">
+        <widget class="QLineEdit" name="le_disasm_start">
+         <property name="inputMask">
+          <string>HHHHHH; </string>
          </property>
-         <layout class="QGridLayout" name="gridLayout_2">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>S</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="2" colspan="2">
-           <widget class="QLabel" name="label_2">
-            <property name="text">
-             <string>Z</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="5" colspan="2">
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>5</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="8" colspan="2">
-           <widget class="QLabel" name="label_6">
-            <property name="text">
-             <string>H</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="0">
-           <widget class="QLabel" name="label_11">
-            <property name="text">
-             <string>3</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2" colspan="2">
-           <widget class="QLabel" name="label_9">
-            <property name="text">
-             <string>P</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="5" colspan="2">
-           <widget class="QLabel" name="label_10">
-            <property name="text">
-             <string>N</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="8" colspan="2">
-           <widget class="QLabel" name="label_8">
-            <property name="text">
-             <string>C</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QCheckBox" name="chk_flag_S">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="4">
-           <widget class="QCheckBox" name="chk_flag_Z">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="7">
-           <widget class="QCheckBox" name="chk_flag_5">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="4">
-           <widget class="QCheckBox" name="chk_flag_P">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="7">
-           <widget class="QCheckBox" name="chk_flag_N">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="10">
-           <widget class="QCheckBox" name="chk_flag_H">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QCheckBox" name="chk_flag_3">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="10">
-           <widget class="QCheckBox" name="chk_flag_C">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-         </layout>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>Length</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1" colspan="2">
+        <widget class="QSpinBox" name="spn_disasm_length">
+         <property name="suffix">
+          <string> lines</string>
+         </property>
+         <property name="minimum">
+          <number>5</number>
+         </property>
+         <property name="maximum">
+          <number>1000</number>
+         </property>
+         <property name="value">
+          <number>10</number>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="0">
+        <widget class="QPushButton" name="b_resume">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+         <property name="text">
+          <string>Resume</string>
+         </property>
         </widget>
        </item>
        <item row="3" column="1">
-        <spacer name="verticalSpacer">
+        <spacer name="horizontalSpacer">
          <property name="orientation">
-          <enum>Qt::Vertical</enum>
+          <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
-           <width>20</width>
-           <height>40</height>
+           <width>54</width>
+           <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
-       <item row="0" column="0">
-        <widget class="QLabel" name="label_4">
+       <item row="3" column="2">
+        <widget class="QPushButton" name="b_step">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
          <property name="text">
-          <string>Refresh every</string>
+          <string>Step</string>
          </property>
         </widget>
+       </item>
+       <item row="2" column="0" colspan="3">
+        <widget class="QListWidget" name="lv_disasm"/>
        </item>
       </layout>
      </widget>
@@ -766,14 +732,17 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>278</width>
-        <height>412</height>
+        <width>234</width>
+        <height>354</height>
        </rect>
       </property>
       <attribute name="label">
        <string>Memory</string>
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout_2">
+       <property name="margin">
+        <number>0</number>
+       </property>
        <item>
         <widget class="QGroupBox" name="groupBox_3">
          <property name="title">
@@ -922,8 +891,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>278</width>
-        <height>412</height>
+        <width>234</width>
+        <height>354</height>
        </rect>
       </property>
       <attribute name="label">
@@ -934,11 +903,17 @@
    </item>
   </layout>
  </widget>
+ <layoutdefault spacing="0" margin="0"/>
  <customwidgets>
   <customwidget>
    <class>CalcHexValue</class>
    <extends>QLineEdit</extends>
    <header>calchexvalue.h</header>
+  </customwidget>
+  <customwidget>
+   <class>CalcFlags</class>
+   <extends>QLabel</extends>
+   <header>calcflags.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
