--- a/gui-qt/calcdebuger.ui
+++ b/gui-qt/calcdebuger.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>244</width>
+    <width>227</width>
     <height>558</height>
    </rect>
   </property>
@@ -26,14 +26,14 @@
    <item>
     <widget class="QToolBox" name="tbPages">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="pageBreakpoints">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>234</width>
+        <width>217</width>
         <height>354</height>
        </rect>
       </property>
@@ -73,10 +73,10 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
+          <item row="2" column="1" colspan="2">
            <widget class="QLineEdit" name="le_break_start_addr">
             <property name="inputMask">
-             <string>HHHH; </string>
+             <string>HHHHHHHH; </string>
             </property>
            </widget>
           </item>
@@ -87,10 +87,10 @@
             </property>
            </widget>
           </item>
-          <item row="3" column="1">
+          <item row="3" column="1" colspan="2">
            <widget class="QLineEdit" name="le_break_end_addr">
             <property name="inputMask">
-             <string>HHHH; </string>
+             <string>HHHHHHHH; </string>
             </property>
            </widget>
           </item>
@@ -101,73 +101,7 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="1">
-           <widget class="QLineEdit" name="le_break_mask_addr">
-            <property name="inputMask">
-             <string>HHHH; </string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="2">
-           <widget class="QLineEdit" name="le_break_start_page">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="inputMask">
-             <string>HH; </string>
-            </property>
-           </widget>
-          </item>
-          <item row="3" column="2">
-           <widget class="QLineEdit" name="le_break_end_page">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="inputMask">
-             <string>HH; </string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="2">
-           <widget class="QLineEdit" name="le_break_mask_page">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
-              <horstretch>0</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-            <property name="inputMask">
-             <string>HH; </string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1">
-           <widget class="QLabel" name="label_30">
-            <property name="text">
-             <string>Address</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="2">
-           <widget class="QLabel" name="label_31">
-            <property name="text">
-             <string>Page</string>
-            </property>
-            <property name="alignment">
-             <set>Qt::AlignCenter</set>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1" colspan="2">
+          <item row="0" column="1" colspan="3">
            <widget class="QComboBox" name="cb_break_type">
             <item>
              <property name="text">
@@ -196,7 +130,7 @@
             </item>
             <item>
              <property name="text">
-              <string>Execute</string>
+              <string>Opcode</string>
              </property>
             </item>
            </widget>
@@ -205,6 +139,30 @@
            <widget class="QLabel" name="label_5">
             <property name="text">
              <string>Type</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="2">
+           <widget class="QRadioButton" name="rb_break_logical">
+            <property name="text">
+             <string>Logical</string>
+            </property>
+            <property name="checked">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QRadioButton" name="rb_break_physical">
+            <property name="text">
+             <string>Physical</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1" colspan="2">
+           <widget class="QLineEdit" name="le_break_mask_addr">
+            <property name="inputMask">
+             <string>HHHHHHHH; </string>
             </property>
            </widget>
           </item>
@@ -238,7 +196,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>234</width>
+        <width>217</width>
         <height>354</height>
        </rect>
       </property>
@@ -648,6 +606,14 @@
       </layout>
      </widget>
      <widget class="QWidget" name="pageDisasm">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>217</width>
+        <height>354</height>
+       </rect>
+      </property>
       <attribute name="label">
        <string>Disassembly</string>
       </attribute>
@@ -732,7 +698,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>234</width>
+        <width>217</width>
         <height>354</height>
        </rect>
       </property>
@@ -891,7 +857,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>234</width>
+        <width>217</width>
         <height>354</height>
        </rect>
       </property>
