just avoid the calcdebugger.ui modification.sorry
git-svn-id: svn://svn.code.sf.net/p/tilem/code/trunk@96 05cf5367-e1a8-405a-8a5c-7f956f11530a

--- a/gui-qt/calcdebuger.ui
+++ b/gui-qt/calcdebuger.ui
@@ -183,7 +183,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QTextEdit" name="te_break_script">
+        <widget class="QPlainTextEdit" name="te_break_script">
          <property name="enabled">
           <bool>false</bool>
          </property>
